syntax = "proto3";

package hello;

option go_package = "./proto";

// Service definition
service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc SayHelloStream (HelloRequest) returns (stream HelloResponse);
}

// Request message
message HelloRequest {
  string name = 1;
}

// Response message  
message HelloResponse {
  string message = 1;
  string timestamp = 2;
}